@@ -73,6 +73,9 @@ Release 0.20.0 - Unreleased
                HeapSize (Erik Holstad via Stack)
    HBASE-1230  Document installation of HBase on Windows
    HBASE-1241  HBase additions to ZooKeeper part 1 (Nitay Joffe via JD)
+   HBASE-1231  Today, going from a RowResult to a BatchUpdate reqiures some
+               data processing even though they are pretty much the same thing
+               (Erik Holstad via Stack)
 
 Release 0.19.0 - 01/21/2009
   INCOMPATIBLE CHANGES
